--- a/pom.xml
+++ b/pom.xml
@@ -9,49 +9,31 @@
     <version>1.3.0-dev</version>
     <packaging>jar</packaging>
 
-    <name>ChestCommandsPro</name>
-    <description>A custom menu plugin for Minecraft servers</description>
-
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.8</java.version>
-        <maven.compiler.source>${java.version}</maven.compiler.source>
-        <maven.compiler.target>${java.version}</maven.compiler.target>
-        <!-- 已验证存在的版本 -->
-        <paper.version>1.16.5-R0.1-SNAPSHOT</paper.version>
+        <paper.version>1.16.5-R0.1</paper.version>
         <protocollib.version>4.8.0</protocollib.version>
-        <placeholderapi.version>2.11.3</placeholderapi.version>
-        <playerpoints.version>2.1.4</playerpoints.version>
+        <placeholderapi.version>2.11.5</placeholderapi.version>
     </properties>
 
-    <!-- 仓库配置必须放在 dependencies 之前 -->
     <repositories>
-        <!-- PaperMC 官方仓库 -->
+        <!-- PaperMC Releases -->
         <repository>
-            <id>papermc</id>
-            <url>https://repo.papermc.io/repository/maven-public/</url>
-            <snapshots>
-                <enabled>true</enabled>
-                <updatePolicy>always</updatePolicy>
-            </snapshots>
+            <id>papermc-releases</id>
+            <url>https://repo.papermc.io/repository/maven-releases/</url>
         </repository>
 
-        <!-- ProtocolLib 仓库 -->
+        <!-- ProtocolLib -->
         <repository>
             <id>dmulloy2</id>
             <url>https://repo.dmulloy2.net/repository/public/</url>
         </repository>
 
-        <!-- PlaceholderAPI 仓库 -->
+        <!-- PlaceholderAPI -->
         <repository>
             <id>extendedclip</id>
             <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
-        </repository>
-
-        <!-- PlayerPoints 正确仓库 -->
-        <repository>
-            <id>codemc</id>
-            <url>https://repo.codemc.io/repository/maven-public/</url>
         </repository>
     </repositories>
 
@@ -79,14 +61,6 @@
             <version>${placeholderapi.version}</version>
             <scope>provided</scope>
         </dependency>
-
-        <!-- PlayerPoints -->
-        <dependency>
-            <groupId>org.black_ixx</groupId>
-            <artifactId>PlayerPoints</artifactId>
-            <version>${playerpoints.version}</version>
-            <scope>provided</scope>
-        </dependency>
     </dependencies>
 
     <build>
@@ -111,44 +85,9 @@
                         <goals>
                             <goal>shade</goal>
                         </goals>
-                        <configuration>
-                            <createDependencyReducedPom>false</createDependencyReducedPom>
-                            <filters>
-                                <filter>
-                                    <artifact>*:*</artifact>
-                                    <excludes>
-                                        <exclude>META-INF/*.SF</exclude>
-                                        <exclude>META-INF/*.DSA</exclude>
-                                        <exclude>META-INF/*.RSA</exclude>
-                                    </excludes>
-                                </filter>
-                            </filters>
-                        </configuration>
                     </execution>
                 </executions>
             </plugin>
         </plugins>
     </build>
-
-    <!-- 正确的 profiles 配置位置 -->
-    <profiles>
-        <profile>
-            <id>aliyun-mirror</id>
-            <repositories>
-                <repository>
-                    <id>aliyun</id>
-                    <url>https://maven.aliyun.com/repository/public</url>
-                    <releases>
-                        <enabled>true</enabled>
-                    </releases>
-                    <snapshots>
-                        <enabled>true</enabled>
-                    </snapshots>
-                </repository>
-            </repositories>
-            <activation>
-                <activeByDefault>true</activeByDefault> <!-- 默认激活镜像 -->
-            </activation>
-        </profile>
-    </profiles>
 </project>
