--- a/pom.xml
+++ b/pom.xml
@@ -12,16 +12,20 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.8</java.version>
-        <paper.version>1.16.5-R0.1-20210115.230527-20</paper.version>
+        <paper.version>1.16.5-794</paper.version>
         <protocollib.version>4.8.0</protocollib.version>
         <placeholderapi.version>2.11.5</placeholderapi.version>
     </properties>
 
     <repositories>
-        <!-- PaperMC 历史构建仓库 -->
+        <!-- PaperMC 新仓库 -->
         <repository>
-            <id>papermc-legacy</id>
-            <url>https://papermc.io/repo/repository/maven-public/</url>
+            <id>papermc</id>
+            <url>https://repo.papermc.io/repository/maven-public/</url>
+            <snapshots>
+                <enabled>true</enabled>
+                <updatePolicy>always</updatePolicy>
+            </snapshots>
         </repository>
 
         <!-- ProtocolLib 仓库 -->
@@ -38,9 +42,9 @@
     </repositories>
 
     <dependencies>
-        <!-- Paper API -->
+        <!-- Paper API (新格式) -->
         <dependency>
-            <groupId>com.destroystokyo.paper</groupId>
+            <groupId>io.papermc.paper</groupId>
             <artifactId>paper-api</artifactId>
             <version>${paper.version}</version>
             <scope>provided</scope>
