--- a/pom.xml
+++ b/pom.xml
@@ -12,20 +12,25 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.8</java.version>
-        <paper.version>1.16.5-794</paper.version>
+        <paper.version>1.16.5-R0.1</paper.version>
         <protocollib.version>4.8.0</protocollib.version>
         <placeholderapi.version>2.11.5</placeholderapi.version>
     </properties>
 
     <repositories>
-        <!-- PaperMC 新仓库 -->
+        <!-- PaperMC 主仓库 -->
         <repository>
             <id>papermc</id>
             <url>https://repo.papermc.io/repository/maven-public/</url>
             <snapshots>
-                <enabled>true</enabled>
-                <updatePolicy>always</updatePolicy>
+                <enabled>false</enabled>
             </snapshots>
+        </repository>
+
+        <!-- PaperMC 旧版仓库 -->
+        <repository>
+            <id>paper-legacy</id>
+            <url>https://repo.azortis.dev/repository/maven-public/</url>
         </repository>
 
         <!-- ProtocolLib 仓库 -->
@@ -42,7 +47,7 @@
     </repositories>
 
     <dependencies>
-        <!-- Paper API (新格式) -->
+        <!-- Paper API -->
         <dependency>
             <groupId>io.papermc.paper</groupId>
             <artifactId>paper-api</artifactId>
