--- a/pom.xml
+++ b/pom.xml
@@ -18,41 +18,25 @@
     </properties>
 
     <repositories>
-        <!-- PaperMC 主仓库 -->
+        <!-- 必需仓库 -->
         <repository>
-            <id>papermc</id>
-            <url>https://repo.papermc.io/repository/maven-public/</url>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
+            <id>codemc-releases</id>
+            <url>https://repo.codemc.io/repository/maven-releases/</url>
         </repository>
-
-        <!-- PaperMC 旧版仓库 -->
         <repository>
-            <id>paper-legacy</id>
-            <url>https://repo.azortis.dev/repository/maven-public/</url>
-        </repository>
-
-        <!-- ProtocolLib 仓库 -->
-        <repository>
-            <id>dmulloy2</id>
+            <id>dmulloy2-snapshots</id>
             <url>https://repo.dmulloy2.net/repository/public/</url>
-        </repository>
-
-        <!-- PlaceholderAPI 仓库 -->
-        <repository>
-            <id>extendedclip</id>
-            <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
         </repository>
     </repositories>
 
     <dependencies>
-        <!-- Paper API -->
+        <!-- 手动安装的 PaperAPI -->
         <dependency>
             <groupId>io.papermc.paper</groupId>
             <artifactId>paper-api</artifactId>
             <version>${paper.version}</version>
-            <scope>provided</scope>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/lib/paper-api-1.16.5-780.jar</systemPath>
         </dependency>
 
         <!-- ProtocolLib -->
@@ -87,16 +71,31 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
-                <version>3.2.4</version>
+                <version>3.5.1</version>
                 <executions>
                     <execution>
                         <phase>package</phase>
                         <goals>
                             <goal>shade</goal>
                         </goals>
+                        <configuration>
+                            <createDependencyReducedPom>false</createDependencyReducedPom>
+                            <relocations>
+                                <relocation>
+                                    <pattern>com.google.gson</pattern>
+                                    <shadedPattern>yourpackage.shaded.gson</shadedPattern>
+                                </relocation>
+                            </relocations>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
         </plugins>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
     </build>
 </project>
